# Labs

./: .gitignore
ComputingSystems/ClientServer/server/: Connectionlog.txt
ComputingSystems/JuliaClientServer/client/: client.cpp
ComputingSystems/JuliaClientServer/server/: ConnectionsLog.txt  server.cpp
ComputingSystems/LizaClientSever/server/: ConnectionsLog.txt
ComputingSystems/MariaClientServer/client/: client.cpp
ComputingSystems/MariaClientServer/server/: server.cpp
OOP/ExcelQMake/: CMakeLists.txt  ExcelQMake.pro  README.md  main.cpp  mainwindow.cpp  mainwindow.cpp.autosave  mainwindow.h  mainwindow.ui  parser.cpp  parser.h
OOP/ExcelQMake/UnitTests/: CMakeLists.txt  projectTests  projectTests.cbp  tests.cpp
OOP/ParserQt/: main.cpp
SPLab1/src/: Main.java
SPLab2/: dataFile.txt  main.java  pom.xml
SPLab3/Lab3/: test1.c  test2.c
SPLab3/Lab3/src/lab3/: Main.java
cmLab23/: CMakeLists.txt  RungeKutta.cpp  RungeKutta.h  Shooting.cpp  Shooting.h  main.cpp
